[tool.poetry]
name = "transit-pylark"
version = "0.1.0"
description = "lark processor for transit format"
authors = ["orpheus <orpheus@computerdream.club>"]
readme = "README.md"
packages = [{include="transit_pylark", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.2.2"
rich = "^13.9.4"
immutabledict = "^4.2.1"
frozenlist = "^1.5.0"
arrow = "^1.3.0"
mpmath = "^1.3.0"
yarl = "^1.18.3"

[tool.poe.tasks]
test.cmd = "nose2 -s tests"
# test.envfile = "${POE_GIT_DIR}/.test-envfile"

[tool.poetry.group.test.dependencies]
nose2 = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
